Fix user channels and index alignment (closes #554)

--- a/apps/user/stylesheets/user_channels.styl
+++ b/apps/user/stylesheets/user_channels.styl
@@ -1,4 +1,4 @@
 .UserChannels
-  margin-top 3em
+  margin-top 2em
   position relative
   padding-bottom 200px
