--- a/components/channel_block_group/stylesheets/index.styl
+++ b/components/channel_block_group/stylesheets/index.styl
@@ -9,6 +9,6 @@
   for i in (1..5)
     @media (min-width:(block_width_mar * i) + 20) and (max-width:(block_width_mar * (i + 1)) + 20)
       &__inner
-        width (block_width_mar * i) + 20
+        width (block_width_mar * i)
       .Block:nth-of-type(1n+{i+1})
         display none
